Fix tiny bug: - Align left for form label. - Remove Yes/No button in tables in Admin index.

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -40,13 +40,6 @@ body{
     color: #fff;
 }
 
-#remember{
-    height: 24px;
-    width: 24px;
-    margin-right: 10px;
-    margin-top: 0px;
-}
-
 .control-label{
     font-weight: 500;
 }
